--- a/PRODIGY_DS_03.ipynb
+++ b/PRODIGY_DS_03.ipynb
@@ -6,7 +6,7 @@
     "id": "Z1eJDpzBkVgC"
    },
    "source": [
-    "# Prodigy Infotech Internship Task  by Eswar Macharla"
+    "# Prodigy Infotech Internship Task  by PAVAN SAI REDDY"
    ]
   },
   {
